// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table player_account {
  id integer [pk, increment]
  player_id integer
  email varchar
  name varchar
  signon_method varchar
  credits integer [default: 0]
  active bool [default: false]
  suspended bool [default: false]
  login_at timestamp [default: `now()`]
  created_at timestamp
}

Table player_sessions {
  id integer [pk, increment]
  player_id integer
  session_id text
  created_at timestamp
}

Table player {
  id integer [pk, increment]
  stats_id integer
  first_name varchar(512)
  last_name varchar(512)
  char_class varchar(100)
  race varchar(40)
  gender varchar(8) [default: 'Female']
  alignment varchar(2)
  level integer [default: 1]
  hit_points integer [default: 5]
  strength integer [default: 5]
  dexterity integer [default: 5]
  constitution integer [default: 5]
  intelligence integer [default: 5]
  wisdom integer [default: 5]
  charisma integer [default: 5]
  age integer [default: 18]
  background text
  description text
  created_at timestamp
  updated_at timestamp [default: `now()`]
}

Table player_stats {
  id integer [pk, increment]
  player_id integer
  proficiency_mod integer [default: 2]
  exp integer [default: 0]
  str_mod integer
  str_score integer
  dex_mod integer
  dex_score integer
  con_mod integer
  con_score integer
  int_mod integer
  int_score integer
  wis_mod integer
  wis_score integer
  cha_mod integer
  cha_score integer
  armor_class integer
  initiative integer
  death_saves_success integer [default: 0]
  death_saves_failed integer [default: 0]
  hit_dice varchar
  speed varchar
  personality_traits text
  ideals text
  bonds text
  flaws text
  languages text
}

Table player_features_traits {
  id integer [pk, increment]
  player_id integer
  name varchar
  description text
}

Table player_items {
  id integer [pk, increment]
  player_id integer
  item_id integer
  amount integer
}

Table player_weapons {
  id integer [pk, increment]
  player_id integer
  item_id integer
  proficient bool [default: false]
  attack_bonus integer [default: 0]
}

Table player_bank {
  id integer [pk, increment]
  player_id integer
  cp integer [default: 0]
  sp integer [default: 0]
  ep integer [default: 0]
  gp integer [default: 0]
  pp integer [default: 0]
}

Table npc {
  id integer [pk, increment]
  world_id integer
  name varchar
  location text
  created_at timestamp [default: `now()`]
}

Table npc_stats {
  id integer [pk, increment]
  npc_id integer
  proficiency_mod integer [default: 2]
  level integer [default: 0]
  hp integer
  exp integer [default: 0]
  str_mod integer
  str_score integer
  dex_mod integer
  dex_score integer
  con_mod integer
  con_score integer
  int_mod integer
  int_score integer
  wis_mod integer
  wis_score integer
  cha_mod integer
  cha_score integer
  armor_class integer
  initiative integer
  death_saves_success integer [default: 0]
  death_saves_failed integer [default: 0]
  hit_dice varchar
  speed varchar
  class varchar
  sex varchar
  race varchar
  alignment varchar
  languages text
}

Table npc_features_traits {
  id integer [pk, increment]
  npc_id integer
  name varchar
  description text
}

Table npc_items {
  id integer [pk, increment]
  npc_id integer
  item_id integer
  proficient bool
  amount integer
}

Table npc_bank {
  id integer [pk, increment]
  npc_id integer
  cp integer [default: 0]
  sp integer [default: 0]
  ep integer [default: 0]
  gp integer [default: 0]
  pp integer [default: 0]
}

Table npc_weapons {
  id integer [pk, increment]
  npc_id integer
  item_id integer
  proficient bool [default: false]
  attack_bonus integer [default: 0]
}


Ref: player.id - player_account.player_id
Ref: player.id - player_sessions.player_id
Ref: player.id - player_features_traits.player_id
Ref: player.id - player_stats.player_id
Ref: player.id - player_items.player_id
Ref: player.id - player_bank.player_id
Ref: player.id - player_weapons.player_id

Ref: npc.id - npc_features_traits.npc_id
Ref: npc.id - npc_stats.npc_id
Ref: npc.id - npc_items.npc_id
Ref: npc.id - npc_bank.npc_id
Ref: npc.id - npc_weapons.npc_id